--- a/control_server_gui/control_server_gui/control_server_gui.csproj
+++ b/control_server_gui/control_server_gui/control_server_gui.csproj
@@ -57,6 +57,7 @@
     <TypeScriptCompile Include="angularjs\components\ValueChanger\directive.ts" />
     <TypeScriptCompile Include="angularjs\index.ts" />
     <TypeScriptCompile Include="angularjs\models\JointSettings.Model.ts" />
+    <TypeScriptCompile Include="angularjs\services\PLENControlServer.Service.ts" />
     <TypeScriptCompile Include="angularjs\services\SharedJointSettings.Service.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-animate.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-cookies.d.ts" />
