--- a/control_server_gui/control_server_gui/control_server_gui.csproj
+++ b/control_server_gui/control_server_gui/control_server_gui.csproj
@@ -18,16 +18,22 @@
     <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="angularjs\components\ConnectButton\view.html" />
     <Content Include="angularjs\components\InstallButton\view.html" />
     <Content Include="angularjs\components\JointRadioList\view.html" />
+    <Content Include="angularjs\components\JointSelector\view.html" />
     <Content Include="angularjs\components\LoadButton\view.html" />
     <Content Include="angularjs\components\ProgressBar\view.html" />
     <Content Include="angularjs\components\SetterButtons\view.html" />
     <Content Include="angularjs\components\ValueChanger\view.html" />
     <Content Include="assets\css\bootstrap.min.css" />
+    <Content Include="assets\css\index.css" />
+    <Content Include="assets\css\index.min.css">
+      <DependentUpon>index.css</DependentUpon>
+    </Content>
     <Content Include="assets\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="assets\img\bg.gif" />
     <Content Include="assets\img\favicon.ico" />
-    <Content Include="assets\img\plen_body.png" />
     <Content Include="assets\js\angular.js" />
     <Content Include="assets\js\angular.min.js" />
     <Content Include="assets\js\bundle.js" />
@@ -40,10 +46,14 @@
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="angularjs\components\ConnectButton\controller.ts" />
+    <TypeScriptCompile Include="angularjs\components\ConnectButton\directive.ts" />
     <TypeScriptCompile Include="angularjs\components\InstallButton\controller.ts" />
     <TypeScriptCompile Include="angularjs\components\InstallButton\directive.ts" />
     <TypeScriptCompile Include="angularjs\components\JointRadioList\controller.ts" />
     <TypeScriptCompile Include="angularjs\components\JointRadioList\directive.ts" />
+    <TypeScriptCompile Include="angularjs\components\JointSelector\controller.ts" />
+    <TypeScriptCompile Include="angularjs\components\JointSelector\directive.ts" />
     <TypeScriptCompile Include="angularjs\components\LoadButton\controller.ts" />
     <TypeScriptCompile Include="angularjs\components\LoadButton\directive.ts" />
     <TypeScriptCompile Include="angularjs\components\ProgressBar\controller.ts" />
